<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Password Strings -->
    <string name="app_name">DeviceManagementSample</string>
    <string name="enable_disable">Enable DM</string>
    <string name="enable_disable_default">Select to enable device management.</string>
    <string name="password_section">Password Settings:</string>
    <string name="spinner_label">Type:</string>
    <string name="password_quality">Select password type</string>
    <string name="password_length_label">Length:</string>
    <string name="password_length_hint">length</string>
    <string name="password_reset_label">Reset:</string>
    <string name="password_set_hint">Enter password</string>
    <string name="max_fail_limit">Max. failures:</string>
    <string name="max_failed_pw_hint">Maximum pw. failures</string>
    <string name="set_password_button_label">Set:</string>
    <string name="set_password">Set Password</string>
    <string name="reset_password">Reset</string>
    <string name="password_button">Password</string>
    
    <!-- Device Strings -->
    <string name="device_settings">Device related:</string>
    <string name="wipe_data">  Wipe data  </string>
    
    <!-- Email and Active Sync Strings -->
    <string name="email_active_sync_settings">Email &amp; Active Sync. related:</string>
    <string name="email_add">  Add Email  </string>
    <string name="eas_email_delete"> Delete Email </string>
    <string name="get_active_syncid"> Get Sync ID </string>
    
    <!-- VPN Strings -->
    <string name="vpn_settings">VPN related:</string>
    <string name="eas_vpn_add">Add VPN</string>
    <string name="eas_vpn_delete">Delete VPN</string>
    <string name="get_vpn_id">Get VPN ID</string>
    
    <!-- CERT Strings -->
    <string name="cert_settings">Certificate related:</string>
    <string name="cert_inst">Certificate Inst</string>
    
    <!-- Settings - Location & Security - Device administrators Strings -->
    <string name="sample_device_admin">MOTODEV DeviceManagementSample</string>
    <string name="sample_device_admin_description">Sample code for writing a device administration client.</string>
</resources>
